--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -6,5 +6,9 @@ services:
 
   topics.picker.topics_picker:
     class: Alnv\TopicsPickerProviderBundle\Picker\TopicsPickerProvider
+    arguments:
+      - "@knp_menu.factory"
+      - "@router"
+      - "@translator"
     tags:
       - { name: contao.picker_provider, priority: 128 }
